add background shadow for translate popup

--- a/app/src/main/res/layout/menu_popup_translate.xml
+++ b/app/src/main/res/layout/menu_popup_translate.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="right"
     android:padding="5dp"
-    android:background="@color/finestWhite">
+    android:background="@drawable/border_shadow">
 
     <TextView
         android:id="@+id/text_menu_settings_language"
