--- a/app/src/main/res/menu/menu_conference.xml
+++ b/app/src/main/res/menu/menu_conference.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_video_call"
-        android:icon="@drawable/ic_chat_camera"
+        android:icon="@drawable/ic_camera"
         android:title="@string/menu_verify"
         app:showAsAction="always" />
     <item
         android:id="@+id/menu_voice_call"
-        android:icon="@drawable/ic_chat_call"
+        android:icon="@drawable/ic_phone"
         android:title="@string/menu_verify"
         app:showAsAction="always" />
 </menu>
