--- a/app/src/main/res/layout/actionbar_register.xml
+++ b/app/src/main/res/layout/actionbar_register.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"/>
 
-    <TextView
+    <net.wrappy.im.helper.layout.AppTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -22,5 +22,13 @@
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:layout_centerInParent="true"/>
+
+    <LinearLayout
+        android:id="@+id/actionBarContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal"/>
 
 </RelativeLayout>
