--- a/app/src/main/res/layout/update_profile_activity.xml
+++ b/app/src/main/res/layout/update_profile_activity.xml
@@ -246,7 +246,7 @@
                             style="@style/AppButton_OK"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/complete" />
+                            android:text="@string/btn_next" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
