--- a/app/src/main/res/layout/add_contact_new_activity.xml
+++ b/app/src/main/res/layout/add_contact_new_activity.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/search_background"
-        android:drawableLeft="@drawable/ic_search_white_24dp"
+        android:drawableLeft="@drawable/ic_search_m"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
         android:hint="@string/search_username"
