--- a/app/src/main/res/menu/contact_list_menu.xml
+++ b/app/src/main/res/menu/contact_list_menu.xml
@@ -24,6 +24,9 @@
         android:id="@+id/menu_search"
         android:icon="@drawable/ic_chat_menu_search"
         android:title="@string/search_by_id"
+        android:iconifiedByDefault="false"
+        android:searchIcon="@null"
+        android:searchHintIcon="@null"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 
