--- a/app/src/main/res/layout/actionbar_register.xml
+++ b/app/src/main/res/layout/actionbar_register.xml
@@ -16,14 +16,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_ab_arrow_back"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"/>
+            android:layout_gravity="center_vertical"/>
 
         <FrameLayout
             android:id="@+id/frActionBarContainer"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
 
