--- a/app/src/main/res/layout/contacts_picker_activity.xml
+++ b/app/src/main/res/layout/contacts_picker_activity.xml
@@ -30,6 +30,10 @@
         app:contentInsetStartWithNavigation="0dp"
         app:layout_collapseMode="pin"></android.support.v7.widget.Toolbar>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/llRoot"
@@ -71,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="3dp">
+                android:padding="8dp">
 
                 <net.wrappy.im.ui.CircleColorImageView
                     android:layout_width="40dp"
@@ -108,7 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="3dp">
+                android:padding="8dp">
 
                 <net.wrappy.im.ui.CircleColorImageView
                     android:layout_width="40dp"
@@ -133,6 +137,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:background="#efefef">
 
                 <net.ironrabbit.type.CustomTypefaceTextView
@@ -166,8 +171,10 @@
 
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/containerGroup"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <FrameLayout
+            android:id="@+id/containerGroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
+
 </LinearLayout>
