--- a/app/src/main/res/layout/actionbar_chat_room.xml
+++ b/app/src/main/res/layout/actionbar_chat_room.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/chat_room_avatar"
@@ -11,9 +10,12 @@
         android:src="@drawable/avatar"/>
 
     <ImageView
-        android:id="@+id/image_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/chat_room_status"
+        android:layout_width="7dp"
+        android:layout_height="7dp"
+        android:src="@drawable/status_active"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
 
     <net.wrappy.im.helper.layout.AppTextView
         android:id="@+id/chat_room_nickname"
@@ -21,6 +23,7 @@
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:textColor="#ffffff"
-        android:layout_marginLeft="5dp"/>
+        android:layout_toRightOf="@id/chat_room_avatar"
+        android:layout_marginLeft="10dp" />
 
-</LinearLayout>
+</RelativeLayout>
