--- a/app/src/main/res/layout/verify_code_fragment.xml
+++ b/app/src/main/res/layout/verify_code_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/lnVerifyContainer">
 
     <net.wrappy.im.helper.layout.AppTextView
         style="@style/AppText_Default_Light"
@@ -20,6 +21,12 @@
         android:layout_gravity="center_horizontal"
         android:focusableInTouchMode="true"
         android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatSpinner
+            android:id="@+id/spnProfileCountryCodes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"/>
 
         <net.wrappy.im.helper.layout.AppEditTextView
             android:id="@+id/edVerifyPhone"
