--- a/app/src/main/res/layout/contact_view.xml
+++ b/app/src/main/res/layout/contact_view.xml
@@ -40,17 +40,18 @@
 
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_height="match_parent"
             android:foregroundGravity="center|top">
 
             <net.ironrabbit.type.CustomTypefaceTextView
                 android:id="@+id/image_section"
                 android:layout_width="36dp"
+                android:layout_marginLeft="5dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center|top"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#bbb9b9"/>
+                android:textColor="#bbb9b9"
+                android:visibility="gone"/>
         </FrameLayout>
 
         <FrameLayout
@@ -139,29 +140,27 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="left|center"
-            android:background="@drawable/rounded_shape_white"
-            android:scaleType="centerCrop"
-            android:visibility="gone" />
+            <ImageView
+                android:id="@+id/avatar"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="5dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/avatarCheck"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="left|center"
-            android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/check_view_background"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_check_white_24dp"
-            android:tint="@android:color/white"
-            android:visibility="gone" />
+            <ImageView
+                android:id="@+id/avatarCheck"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="left|top"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="35dp"
+                android:padding="2dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/status_active"
+                android:visibility="gone" />
+
         </FrameLayout>
     </LinearLayout>
 
