--- a/app/src/main/res/layout/launcher_main.xml
+++ b/app/src/main/res/layout/launcher_main.xml
@@ -44,12 +44,13 @@
             android:drawablePadding="5dp"
             android:gravity="left"
             android:hint="@string/id_or_username"
-            android:imeOptions="actionDone"
-            android:inputType="textNoSuggestions"
+            android:inputType="text"
             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
             android:padding="5dp"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:maxLines="1"
+            android:imeOptions="actionDone"/>
 
 
         <net.wrappy.im.helper.layout.AppButton
