--- a/app/src/main/res/layout/group_member_view.xml
+++ b/app/src/main/res/layout/group_member_view.xml
@@ -63,7 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?contactTextSecondary" />
+            android:textColor="?contactTextSecondary"
+            android:visibility="gone"/>
 
         <!--
              CustomTypefaceTextViewView
