--- a/app/src/main/res/values/zomstrings.xml
+++ b/app/src/main/res/values/zomstrings.xml
@@ -1,117 +1,90 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<!DOCTYPE resources [
-    <!ENTITY appName "Wrappy">
-    ]>
+<?xml version='1.0' encoding='UTF-8'?><!DOCTYPE resources [<!ENTITY appName "Wrappy">]>
 <resources>
-  <string name="app_name_zom">&appName;</string>
-  <string name="create_an_account">Register</string>
-  <string name="create_id">Create a &appName; ID</string>
-  <string name="advanced">Advanced</string>
-  <string name="account_congrats">Congratulations, you are ready to &appName;!</string>
-  <string name="account_congrats_details">You can find your password and account details on your profile page.</string>
-  <string name="invite_friends">Add Friends!</string>
-  <string name="invite_sms">SMS</string> 
-  <string name="invite_share">Share</string>
-  <string name="invite_scan_qr">Scan</string>
-  <string name="sign_in_message">Sign into an existing account</string>
+    <string name="app_name_zom">&appName;</string>
+    <string name="create_an_account">Register</string>
+    <string name="create_id">Create a &appName; ID</string>
+    <string name="advanced">Advanced</string>
+    <string name="account_congrats">Congratulations, you are ready to &appName;!</string>
+    <string name="account_congrats_details">You can find your password and account details on your profile page.</string>
+    <string name="invite_friends">Add Friends!</string>
+    <string name="invite_sms">SMS</string>
+    <string name="invite_share">Share</string>
+    <string name="invite_scan_qr">Scan</string>
+    <string name="sign_in_message">Sign into an existing account</string>
     <string name="add_friends">Add Friends</string>
-  <string name="search_by_id">Search by ID</string>
-  <string name="invite_accepted">You are now friends on &appName;</string>
+    <string name="search_by_id">Search by ID</string>
+    <string name="invite_accepted">You are now friends on &appName;</string>
     <string name="choose_friend">Choose a Friend</string>
-  <string name="send_message">Send a message</string>
-  <string name="push_to_talk">Push to talk</string>
-  <string name="recording_release">Recording… Release to send</string>
-  <string name="recording_delete">Recording… Release to delete</string>
-  <string name="swipe_up_delete">Swipe up to delete</string>
-  <string name="create_group">Create a Group</string>
-  <string name="members">Members</string>
+    <string name="send_message">Send a message</string>
+    <string name="push_to_talk">Push to talk</string>
+    <string name="recording_release">Recording… Release to send</string>
+    <string name="recording_delete">Recording… Release to delete</string>
+    <string name="swipe_up_delete">Swipe up to delete</string>
+    <string name="create_group">Create a Group</string>
+    <string name="members">Members</string>
     <string name="photo_gallery">Photo Stream</string>
     <string name="select_avatar">Select or Create an Avatar</string>
-  <string name="delete_account">Delete Account</string>
+    <string name="delete_account">Delete Account</string>
     <string name="choose_photos">Choose from Photos</string>
-  <string name="choose_language">Switch Language</string>
+    <string name="choose_language">Switch Language</string>
     <string name="onboarding_generate">Create a &appName; ID and we will generate a secure password for you.</string>
-  <string name="grant_perms_camera">You must grant permission for &appName; to use the camera</string>
-  <string name="grant_perms_pick_file">You must grant permission for &appName; to select file</string>
-  <!--<string name="grant_perms_pick_image">You must grant permission for &appName; to select image</string>-->
-  <string name="grant_perms_audio">You must grant permission for &appName; to record audio</string>
+    <string name="grant_perms_camera">You must grant permission for &appName;
+        to use the camera</string>
+    <string name="grant_perms_pick_file">You must grant permission for &appName;
+        to select file</string>
+    <!--<string name="grant_perms_pick_image">You must grant permission for &appName; to select image</string>-->
+    <string name="grant_perms_audio">You must grant permission for &appName;
+        to record audio</string>
 
     <string name="action_archived">Archived</string>
-  <string name="action_verified">Verified</string>
+    <string name="action_verified">Verified</string>
 
     <string name="pref_block_screenshots_title">Block Screenshots</string>
-  <string name="pref_block_screenshots_summary">Block attempts for other apps to take screenshots of this app</string>
+    <string name="pref_block_screenshots_summary">Block attempts for other apps to take screenshots of this app</string>
 
-  <string name="pref_enable_tibetan_dictionary_title">Enable Tibetan Dictionary</string>
-  <string name="pref_enable_tibetan_dictionary_summary">If present, suggest Tibetan matching words from the Monlam Tibetan Dictionary app</string>
+    <string name="pref_enable_tibetan_dictionary_title">Enable Tibetan Dictionary</string>
+    <string name="pref_enable_tibetan_dictionary_summary">If present, suggest Tibetan matching words from the Monlam Tibetan Dictionary app</string>
 
-  <string name="color_category_title">Custom Colors</string>
-  <string name="color_reset_title">Reset Colors</string>
-  <string name="color_reset_summary">Reset colors to default values</string>
+    <string name="color_category_title">Custom Colors</string>
+    <string name="color_reset_title">Reset Colors</string>
+    <string name="color_reset_summary">Reset colors to default values</string>
 
-  <string name="color_header_title">Header Colors</string>
-  <string name="color_header_summary">Color of headers, actionbars and toolbars</string>
+    <string name="color_header_title">Header Colors</string>
+    <string name="color_header_summary">Color of headers, actionbars and toolbars</string>
 
-  <string name="color_text_title">Text Color</string>
-  <string name="color_text_summary">Color of text in messages and lists</string>
+    <string name="color_text_title">Text Color</string>
+    <string name="color_text_summary">Color of text in messages and lists</string>
 
 
-  <string name="color_bg_title">Background Color</string>
-  <string name="color_bg_summary">Color of chat backgrounds and lists</string>
+    <string name="color_bg_title">Background Color</string>
+    <string name="color_bg_summary">Color of chat backgrounds and lists</string>
 
     <string name="header_got_invited">GOT INVITED?</string>
-  <string name="action_tap_invite">Tap the &appName; invite link from your friend or scan their QR code now</string>
+    <string name="action_tap_invite">Tap the &appName; invite link from your friend or scan their QR code now</string>
 
     <string name="security_code">Secure Identity</string>
 
     <string name="migrate_menu">Migrate Account</string>
-  <string name="migrate_message">"I’ve upgraded my account. &appName; me at </string>
-
+    <string name="migrate_message">"I’ve upgraded my account. &appName; me at </string>
     <string name="action_undo">Undo</string>
-
-    <string name="message_upgrade">We need to upgrade your &appName; account to a new server. We can automatically upgrade you to provide the best performance.</string>
-
-    <string name="upgrade_desc">We\'re making improvements around here.\nGet your free upgrade!</string>
-
-    <string name="upgrade_action">Upgrade Now</string>
-
-    <string name="upgrade_complete">Upgrade Complete! Waiting for your friends to approve your upgraded account.</string>
-
-  <string name="upgrade_complete_action">Done</string>
-
-    <string name="upgrade_progress_action">Working on it…</string>
-
-  <string name="upgrade_failed">The upgrade failed. Please try again later! You can also select \"Migrate Account\" from the account settings menu.</string>
-
     <string name="contact_migration_notice">Your friend has upgraded. Chat with them at</string>
-
-  <string name="contact_migration_action">Chat Now</string>
-
-
+    <string name="contact_migration_action">Chat Now</string>
     <string name="message_waiting_for_friend">Waiting for %s to accept your friend request.</string>
-
-
     <string name="action_active">Active</string>
-
-  <string name="action_archive">Archive</string>
-
-
-  <string name="title_pending">Pending Approval</string>
+    <string name="action_archive">Archive</string>
+    <string name="title_pending">Pending Approval</string>
 
 
     <string name="action_add_buddy">Add friend</string>
-  <string name="action_leave">Leave</string>
-  <string name="action_delete_group">Delete</string>
-  <string name="action_remove_member_group">Remove member</string>
-  <string name="add_people">Add People</string>
-  <string name="turn_notifications_on">Turn notifications on</string>
-  <string name="turn_notifications_off">Mute notifications</string>
-  <string name="is_already_in_your_group">%1$s ✔️</string>
-  <string name="num_member_group_chat">%1$s members</string>
-
-  <string name="confirm_leave_group">Are you sure you want to leave the group?</string>
-  <string name="confirm_delete_and_leave_group">Are you sure you want to delete the group?</string>
-  <string name="confirm_remove_member_group">Are you sure you want to remove this member?</string>
-
-  <string name="contactswrappy">Wrappy Contacts</string>
+    <string name="action_leave">Leave</string>
+    <string name="action_delete_group">Delete</string>
+    <string name="action_remove_member_group">Remove member</string>
+    <string name="add_people">Add People</string>
+    <string name="turn_notifications_on">Turn notifications on</string>
+    <string name="turn_notifications_off">Mute notifications</string>
+    <string name="num_member_group_chat">%1$s members</string>
+    <string name="confirm_leave_group">Are you sure you want to leave the group?</string>
+    <string name="confirm_delete_and_leave_group">Are you sure you want to delete the group?</string>
+    <string name="confirm_remove_member_group">Are you sure you want to remove this member?</string>
+    <string name="contactswrappy">Contacts</string>
 </resources>
