--- a/app/src/main/res/layout/contact_view.xml
+++ b/app/src/main/res/layout/contact_view.xml
@@ -20,23 +20,22 @@
 
     class="net.wrappy.im.ui.ContactListItem"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_height="72dp"
+    android:layout_marginLeft="16dp"
+    android:padding="3dp">
 
     <FrameLayout
         android:id="@+id/linesection"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#bbb9b9">
+        style="@style/divider">
     </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="5dp"
+        android:paddingBottom="3dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingTop="10dp">
+        android:paddingTop="6dp">
 
         <FrameLayout
             android:layout_width="wrap_content"
@@ -123,7 +122,7 @@
                 android:layout_toStartOf="@+id/btnDeclineSubscription"
                 android:background="@color/holo_green_dark"
                 android:text="✔"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/white" />
 
             <net.ironrabbit.type.CustomTypefaceButton
@@ -142,8 +141,8 @@
 
             <ImageView
                 android:id="@+id/avatar"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="5dp"
                 android:scaleType="centerCrop"
                 android:visibility="gone" />
@@ -153,9 +152,9 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="left|top"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="35dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="32dp"
                 android:padding="2dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/status_active"
