set distance between sticker and text message

--- a/app/src/main/res/layout/message_view_left.xml
+++ b/app/src/main/res/layout/message_view_left.xml
@@ -101,7 +101,7 @@
             <FrameLayout
                 android:id="@+id/media_thumbnail_container"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:descendantFocusability="blocksDescendants"
                 android:padding="0dp"
                 android:visibility="gone">
@@ -109,7 +109,7 @@
                 <ImageView
                     android:id="@+id/media_thumbnail"
                     android:layout_width="100dp"
-                    android:layout_height="150dp"
+                    android:layout_height="100dp"
                     android:focusableInTouchMode="true"
                     android:scaleType="centerCrop" />
 
