--- a/app/src/main/res/layout/message_view_left.xml
+++ b/app/src/main/res/layout/message_view_left.xml
@@ -40,7 +40,8 @@
             android:layout_marginRight="36dp"
             android:orientation="vertical"
             android:padding="0dp"
-            android:paddingLeft="16dp">
+            android:paddingLeft="16dp"
+            android:minWidth="100dp">
 
             <LinearLayout
                 android:id="@+id/audio_container"
