--- a/app/src/main/res/layout/message_view_right.xml
+++ b/app/src/main/res/layout/message_view_right.xml
@@ -37,7 +37,8 @@
             android:id="@+id/message_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:minWidth="100dp">
 
             <LinearLayout
                 android:id="@+id/audio_container"
