--- a/app/src/main/res/layout/actionbar_chat_room.xml
+++ b/app/src/main/res/layout/actionbar_chat_room.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
@@ -25,5 +27,18 @@
         android:textColor="#ffffff"
         android:layout_toRightOf="@id/chat_room_avatar"
         android:layout_marginLeft="10dp" />
+
+    <SearchView
+        android:id="@+id/searchtext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:icon="@drawable/ic_chat_menu_search"
+        android:iconifiedByDefault="false"
+        android:searchIcon="@null"
+        android:background="@drawable/background_search_view"
+        app:showAsAction="always|collapseActionView"
+        android:visibility="gone"/>
 
 </RelativeLayout>
