--- a/app/src/main/res/layout/message_view_left.xml
+++ b/app/src/main/res/layout/message_view_left.xml
@@ -22,15 +22,12 @@
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
     android:descendantFocusability="blocksDescendants"
-    android:padding="3dp"
-
-    >
+    android:padding="3dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
 
         <LinearLayout
             android:id="@+id/message_container"
@@ -38,10 +35,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="36dp"
+            android:minWidth="100dp"
             android:orientation="vertical"
             android:padding="0dp"
-            android:paddingLeft="16dp"
-            android:minWidth="100dp">
+            android:paddingLeft="16dp">
 
             <LinearLayout
                 android:id="@+id/audio_container"
@@ -77,7 +74,6 @@
                 android:padding="6dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="?messageTextPrimary" />
-
 
             <TextView
                 android:id="@+id/txttranslate"
@@ -146,5 +142,5 @@
         android:id="@+id/avatar"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 </view>
