updated error message

--- a/app/src/main/res/values/error.xml
+++ b/app/src/main/res/values/error.xml
@@ -26,29 +26,29 @@
     <string name="error_8001">Access is denied</string>
     <string name="error_8002">Please try again later</string>
     <string name="error_8003">Member already exists</string>
-    <string name="error_8004">Member not exists</string>
+    <string name="error_8004">Member does not exists</string>
     <string name="error_8005">Member already activated</string>
     <string name="error_8006">Member not activated</string>
-    <string name="error_8007">Member invalid email address</string>
+    <string name="error_8007">Member entered an invalid email address</string>
     <string name="error_8009">Verification code expired or invalid</string>
-    <string name="error_8010">Asset not exists</string>
-    <string name="error_8011">Asset retain failure file empty</string>
-    <string name="error_8013">Asset fetch failure file unavailable</string>
+    <string name="error_8010">Image does not exist</string>
+    <string name="error_8011">Image retain failure file is empty</string>
+    <string name="error_8013">Image fetch failure file is unavailable</string>
     <string name="error_8016">Asset type not determines</string>
-    <string name="error_8017">Registrant not exists</string>
-    <string name="error_8020">Mail exception</string>
-    <string name="error_8021">Sms exception payload length exceed limit</string>
+    <string name="error_8017">Registration does not exist</string>
+    <string name="error_8020">Cannot send email</string>
+    <string name="error_8021">SMS has exceeded character limit</string>
     <string name="error_8022">Username already exists</string>
-    <string name="error_8023">Mobile already exists</string>
+    <string name="error_8023">Mobile number already exists</string>
     <string name="error_8024">Email already exists</string>
-    <string name="error_8025">Resource not exists</string>
-    <string name="error_8026">Member security questions not found</string>
+    <string name="error_8025">Resource does not exist</string>
+    <string name="error_8026">Member\'s security questions not found</string>
     <string name="error_8027">Member doesn\'t exist</string>
     <string name="error_8028">Email doesn\'t exist</string>
     <string name="error_8029">Report already exists</string>
-    <string name="error_8030">Report already not exists</string>
-    <string name="error_8031">Inviter user not exists</string>
+    <string name="error_8030">Report does not exist</string>
+    <string name="error_8031">User does not exist</string>
     <string name="error_8032">Create user on the xmpp fail</string>
-    <string name="error_8033">Member answered wrong security question</string>
+    <string name="error_8033">Oops! You answered the wrong security question</string>
 
 </resources>
