--- a/app/src/main/res/values-zh/error.xml
+++ b/app/src/main/res/values-zh/error.xml
@@ -8,7 +8,7 @@
     <string name="error_invalid_characters">用戶名字需要包括特別符號</string>
     <string name="error_empty_phone">電話號碼不能填空</string>
     <string name="error_empty_email">Please input the email</string>
-    <string name="error_input_referral">Referral is not valid</string>
+    <!--<string name="error_input_referral">Referral is not valid</string>-->
     <string name="error_empty_passcode">Please input the passcode</string>
     <string name="error_invalid_passcode">Please check the passcode</string>
     <string name="error_invalid_email">不正確的電郵格式</string>
@@ -21,7 +21,6 @@
 
     <!--error code from server-->
     <string name="error_0">Internet may not be available. Please check again</string>
-    <string name="error_400">The username or pattern is incorrect</string>
     <string name="error_8000">Version mismatch</string>
     <string name="error_8001">Access is denied</string>
     <string name="error_8002">Please try again later</string>
