--- a/app/src/main/res/values/error.xml
+++ b/app/src/main/res/values/error.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="error_question_duplicate">Your question have duplicated</string>
+    <string name="error_question_duplicate">You cannot choose the same security question</string>
     <string name="error_empty_answer">Your answer of question %d is empty</string>
     <string name="error_min_length_answer">Your answer of question %d must have at least 3 letter</string>
-    <string name="error_duplicate_answer">Your answer have duplicated</string>
+    <string name="error_duplicate_answer">Your answers must be different</string>
     <string name="error_invalid_text_length">Username must be at least 6 characters</string>
-    <string name="error_invalid_characters">Username can not contain special characters</string>
-    <string name="error_empty_phone">Please input the mobile phone</string>
-    <string name="error_empty_email">Please input the email</string>
-    <string name="error_input_referral">Referral is not valid</string>
+    <string name="error_invalid_characters">Username cannot contain special characters</string>
+    <string name="error_empty_phone">Please input the mobile phone number</string>
+    <string name="error_empty_email">Please input email address</string>
+    <!--<string name="error_input_referral">Referral code is not valid</string>-->
     <string name="error_empty_passcode">Please input the passcode</string>
     <string name="error_invalid_passcode">Please check the passcode</string>
-    <string name="error_invalid_email">Email is not valid format</string>
+    <string name="error_invalid_email">Email address is not a valid format</string>
     <string name="error_group_name_empty">Please input the group name</string>
     <string name="error_group_empty">Please choose members</string>
     <string name="error_empty_username">Please input your username</string>
@@ -21,7 +21,6 @@
 
     <!--error code from server-->
     <string name="error_0">Internet may not be available. Please check again</string>
-    <string name="error_400">The username or pattern is incorrect</string>
     <string name="error_8000">Version mismatch</string>
     <string name="error_8001">Access is denied</string>
     <string name="error_8002">Please try again later</string>
