--- a/app/src/main/res/values/zomstrings.xml
+++ b/app/src/main/res/values/zomstrings.xml
@@ -30,11 +30,9 @@
     <string name="onboarding_generate">Create a &appName; ID and we will generate a secure password for you.</string>
     <string name="grant_perms_camera">You must grant permission for &appName;
         to use the camera</string>
-    <string name="grant_perms_pick_file">You must grant permission for &appName;
-        to select file</string>
+    <string name="grant_perms_pick_file">You must grant permission for &appName; to select file</string>
     <!--<string name="grant_perms_pick_image">You must grant permission for &appName; to select image</string>-->
-    <string name="grant_perms_audio">You must grant permission for &appName;
-        to record audio</string>
+    <string name="grant_perms_audio">You must grant permission for &appName; to record audio</string>
 
     <string name="action_archived">Archived</string>
     <string name="action_verified">Verified</string>
